syntax = "proto3";
package com.github.leleact.jtest.grpc.api;
option java_multiple_files = true;
option java_package = "com.github.leleact.jtest.grpc.api";
option java_outer_classname = "GrpcDemoStreamProto";

service GrpcStreamService{
  rpc unaryRpc(RequestMessage) returns (ResponseMessage){}
  rpc serverStreamRpc(RequestMessage) returns (stream ResponseMessage) {}
  rpc clientStreamRpc(stream RequestMessage) returns (ResponseMessage) {}
  rpc bidirectionalStreamRpc(stream RequestMessage) returns (stream ResponseMessage){}
}

message RequestMessage{
  string req_msg = 1;
}

message ResponseMessage{
  string rsp_msg = 1;
}