syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.leleact.jtest.grpc.stream";
option java_outer_classname = "DoubleWayStreamProto";

package double_way_stream;

service DoubleStreamService{
  rpc DoubleWayStreamFun(stream RequestMessage) returns (stream ResponseMessage){}
}

message RequestMessage{
  string req_msg = 1;
}

message ResponseMessage{
  string rsp_msg = 1;
}